# Klosar

./: CMakeLists.txt  Main.cpp
Blender/: TEST - Copy.blend
blender/: HOJATESTTAPRAV.blend  neki.tzxt
libs/glad-3.3-core/include/glad/: glad.h
libs/glad-3.3-core/src/: glad.c
libs/glfw-3.3.8/: CMakeLists.txt
src/: Main.cpp  Ostalo.h  Renderer.cpp  Renderer.h
